<resources>
    <string name="app_name">MovieFlix</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="section_top_five">Movies: Top 5</string>
    <string name="section_genres">Browse by Genre</string>
    <string name="section_browse_all">Browse by All</string>
    <string name="play">Play</string>
    <string name="my_list">My List</string>
    <string name="collapse">Collapse</string>
    <string name="expand">Expand</string>
    <string name="cast">Cast</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="top_10_rating_movies">Top 5 most-rated movies</string>
</resources>