<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/dashboard"
        android:name="com.podium.technicalchallenge.presentation.fragment.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_dashboard_to_notifications"
            app:destination="@id/notifications" />
    </fragment>
    <fragment
        android:id="@+id/home"
        android:name="com.podium.technicalchallenge.presentation.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_home_to_dashboard"
            app:destination="@id/dashboard" />
        <action
            android:id="@+id/action_home_to_movieDetailFragment"
            app:destination="@id/movieDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/notifications"
        android:name="com.podium.technicalchallenge.presentation.fragment.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/movieDetailFragment"
        android:name="com.podium.technicalchallenge.presentation.fragment.MovieDetailFragment"
        android:label="fragment_movie_detail"
        tools:layout="@layout/fragment_movie_detail" >
        <argument
            android:name="movie"
            app:argType="com.podium.technicalchallenge.domain.entity.MovieEntity" />
    </fragment>

</navigation>