<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.fragment.HomeFragment">

    <data>
        <variable
            name="topFiveMoviesAdapter"
            type="com.podium.technicalchallenge.presentation.adapter.MoviesAdapter" />

        <variable
            name="allMoviesAdapter"
            type="com.podium.technicalchallenge.presentation.adapter.MoviesAdapter" />

        <variable
            name="homeGenresAdapter"
            type="com.podium.technicalchallenge.presentation.adapter.GenresAdapter" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutRecommendedMovie"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgRecommendedMovie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/ic_launcher_background"/>

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/RecommendedMovieTextStyle"
                    android:id="@+id/txtMovieTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin16"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@id/btnPlay"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="Scorpion"/>

                <com.google.android.material.button.MaterialButton
                    style="@style/Button.Rounded"
                    android:id="@+id/btnPlay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin16"
                    android:text="@string/play"
                    android:textStyle="bold"
                    app:icon="@drawable/ic_play_circle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/txtMovieTitle"/>

                <com.google.android.material.button.MaterialButton
                    style="@style/Button.Outlined"
                    android:id="@+id/btnAddToFavorites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin16"
                    android:text="@string/my_list"
                    android:textStyle="bold"
                    app:icon="@drawable/ic_add"
                    app:layout_constraintBottom_toBottomOf="@id/btnPlay"
                    app:layout_constraintStart_toEndOf="@id/btnPlay"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SectionTextStyle"
                android:id="@+id/txtSectionTopFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin16"
                android:text="@string/section_top_five"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutRecommendedMovie"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerTopMovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:adapter="@{topFiveMoviesAdapter}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtSectionTopFive"
                tools:listitem="@layout/home_movie_item"
                tools:itemCount="5"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SectionTextStyle"
                android:id="@+id/txtSectionGenres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/section_genres"
                app:layout_constraintStart_toStartOf="@id/txtSectionTopFive"
                app:layout_constraintTop_toBottomOf="@id/recyclerTopMovies"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerGenres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:adapter="@{homeGenresAdapter}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/txtSectionGenres"
                tools:listitem="@layout/movie_genre_item"
                tools:itemCount="5"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SectionTextStyle"
                android:id="@+id/txtSectionAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/section_browse_all"
                app:layout_constraintStart_toStartOf="@id/txtSectionTopFive"
                app:layout_constraintTop_toBottomOf="@id/recyclerGenres"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Button.Icon"
                android:id="@+id/btnSort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_sort"
                app:iconTint="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@id/txtSectionAll"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/txtSectionAll"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerBrowseAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:adapter="@{allMoviesAdapter}"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/txtSectionAll"
                app:spanCount="2"
                tools:listitem="@layout/home_movie_item"
                tools:itemCount="6"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>